[B]Retrospect v5.4.9 - Changelog - 2021-11-07[/B]

t.b.d.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
* Added: Set the TV Show info label for episodes (Fixes #1577).

[B]Channel related[/B]
* Fixed: Some RTV Utrecht video's did not play.
* Fixed: Apple Movie Trailers failed do to missing meta data (Fixes #1575).
* Fixed: RTV Utrecht moved to Regio Groei platform.
* Fixed: Microsoft Channel 9 / Learn channel (Fixes 1574).
* Fixed: RTV Oost mainlist parsing.